--- a/scratches/scratch.css
+++ b/scratches/scratch.css
@@ -26,7 +26,9 @@
     display: flex;
 
 }
-
+.none{
+    color: white;
+}
 .box__left {
     flex: 2;
     padding: 10px;
@@ -38,7 +40,7 @@
     background-color: lightgray;
     text-align: center;
     border-radius: 50px;
-    box-shadow: 0 0 0 3px greenyellow;
+    box-shadow: 0 0 0 3px #2fff59;
 }
 
 .box__right > * {
@@ -55,15 +57,15 @@
 .button__style{
 
     height: 20px;
-    width: 40px;
-    color: greenyellow;
+    width: 50px;
+    color: #2fff59;
     background: black;
     border-radius: 50px;
     padding: 10px;
     margin: 5px;
-    border-color: greenyellow;
+    border-color: #2fff59;
     text-decoration: none;
-    box-shadow: 0 0 0 3px greenyellow;
+    box-shadow: 0 0 0 3px #2fff59;
 }
 
 .w{
@@ -74,12 +76,106 @@
     background-color: darkgray;
     color: white;
     width: 100px;
-    height: 120px;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     border-radius: 30px;
-    box-shadow: 0 0 0 5px greenyellow;
+    box-shadow: 0 0 0 5px #2fff59;
 }
 
+#praise__menu{
+    display: flex;
+}
+
+#textInput1 {
+    width: 200px;
+    height: 40px;
+    border: 2px solid #333;
+    border-radius: 15px;
+    padding: 5px;
+    font-size: 16px;
+    color: #2fff59;
+    background-color: #f5f5f5;
+    outline: none;
+}
+
+#textInput1::placeholder {
+    color: #999;
+}
+
+#textInput1:focus {
+    border-color: #2fff59;
+}
+
+#description{
+    width: 400px;
+    height: 60px;
+    border: 2px solid #333;
+    border-radius: 15px;
+    padding: 5px;
+    font-size: 16px;
+    color: #2fff59;
+    background-color: #f5f5f5;
+    outline: none;
+}
+#description::placeholder{
+    color: #999;
+}
+#description:focus{
+    border-color: #2fff59;
+}
+
+.button__add{
+    height: 20px;
+    width: 50px;
+    color: #2fff59;
+    background: black;
+    border-radius: 50px;
+    padding: 10px;
+    margin: 5px;
+    border-color: #2fff59;
+    text-decoration: none;
+    box-shadow: 0 0 0 3px #2fff59;
+}
+.button__search{
+    height: 20px;
+    width: 50px;
+    color: #2fff59;
+    background: black;
+    border-radius: 50px;
+    padding: 10px;
+    margin: 5px;
+    top: 5px;
+    border-color: #2fff59;
+    text-decoration: none;
+    box-shadow: 0 0 0 3px #2fff59;
+}
+
+.edit-button{
+    height: 20px;
+
+    color: #2fff59;
+    background: black;
+    border-radius: 50px;
+    padding: 10px;
+    margin: 5px;
+    top: 5px;
+    border-color: #2fff59;
+    text-decoration: none;
+    box-shadow: 0 0 0 3px #2fff59;
+}
+.save-button{
+    height: 20px;
+
+    color: #2fff59;
+    background: black;
+    border-radius: 50px;
+    padding: 10px;
+    margin: 5px;
+    top: 5px;
+    border-color: #2fff59;
+    text-decoration: none;
+    box-shadow: 0 0 0 3px #2fff59;
+}
