--- a/src/css/App.css
+++ b/src/css/App.css
@@ -57,6 +57,7 @@ li:hover {
 }
 .viwe_more {
   position: absolute;
+  cursor: pointer;
   left: 50%;
 }
 
@@ -124,7 +125,8 @@ margin-top: 100px;
 }
 
 .container{
-  background: #4d4c4c;
+
+  background: #212121;
 }
 
 .viwe_more {
@@ -133,6 +135,23 @@ margin-top: 100px;
   background: #2fff59;
   border-radius: 50px;
 
+}
+.show-full-info-btn {
+  position: absolute;
+   top: 752px;/* Adjust the top value based on your preference */
+  left: 200px; /* Adjust the left value based on your preference */
+  z-index: 994;
+  width: 100px;
+  height: 50px;
+  background: #2fff59;
+  border-radius: 50px;
+}
+.viwe_more2 {
+  width: 100px;
+  height: 50px;
+  background: #2fff59;
+  border-radius: 50px;
+  cursor: pointer;
 }
 
 .viwe_more:hover {
@@ -171,3 +190,147 @@ margin: 0;
 h1{
   color: white;
 }
+
+.dropdown-menu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color:  #10a80a;
+  color: white;
+  padding: 10px;
+}
+
+#options {
+  width: 105px;
+  height: 25px;
+  border-radius: 30px;
+  background-color: #2fff59;
+  margin: 5px;
+}
+.search-menu {
+  background: #2fff59;
+  width: 250px;
+  height: 25px;
+  border-radius: 40px;
+  border-color: #212121;
+
+}
+
+.input-text {
+  background: #2fff59;
+  border-radius: 50px;
+  height: 24px;
+  width: 176px;
+  border: none;
+  outline: none;
+}
+
+.active {
+  background-color: #10a80a;
+  /* Додайте інші стилі за потреби */
+}
+.list-item {
+  background: #464545;
+  border-radius: 20px;
+}
+.value {
+  display: flex;
+  gap: 50px;
+  margin: 10px;
+}
+
+#configurationSelect{
+  background: #2fff59;
+  width: 100px;
+  height: 25px;
+  border-radius: 40px;
+  border-color: #212121;
+
+}
+.custom-select {
+  background: #2fff59;
+  width: 100px;
+  height: 25px;
+  border-radius: 40px;
+  border-color: #212121;
+}
+
+.close-button-section {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 50px;
+}
+
+.button-container {
+  display: flex;
+}
+
+.close-button {
+  width: 100px;
+  height: 50px;
+  background: #464545;
+  border-radius: 50px;
+  margin-right: 20px;
+}
+
+.Add-button {
+  width: 100px;
+  height: 50px;
+  background: #2fff59;
+  border-radius: 50px;
+
+}
+.Countable {
+  width: 120px;
+  height: 30px;
+  background: #4d4c4c;
+  border-radius: 50px;
+  border: 2px solid #2fff59;
+
+}
+
+
+
+/* App.css */
+
+.fade-in {
+  animation: fadeIn 1s ease-in-out;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.loading-circle {
+  /* Додайте стилі для вашого кола загрузки */
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
+
+
